[ims-30] - delete file by string
