# ims-server/src/controllers/TimelineEventController.ts
@@ -5,7 +5,7 @@ import timelineEventService from "../services/timelineEventService";
 import logger from "../loggers/log";
 import axios from "axios";
 import { ActionType, ObjectType } from '../../../ims-socket/src/interfaces';
-import {sendToSocket} from '../services/socket';
+import { sendToSocket } from '../services/socket';
 import AwsController from "./AwsController";
 import awsService from "../services/awsService";
 
@@ -48,8 +48,8 @@ export default class TimelineEventController {
                 if (_timelineEvent.message === constants.MISSNG_REQUIRED_FIELDS) {
                     return res.status(status.MISSNG_REQUIRED_FIELDS).json({ message: _timelineEvent });
                 }
-                if(_timelineEvent.message ==="Validation error" ||_timelineEvent.message ==="Incident ID not found"){
-                    return res.status(status.BAD_REQUEST).json({message:constants.INVALID_MESSAGE})
+                if (_timelineEvent.message === "Validation error" || _timelineEvent.message === "Incident ID not found") {
+                    return res.status(status.BAD_REQUEST).json({ message: constants.INVALID_MESSAGE })
                 }
                 else {
                     return res.status(status.SERVER_ERROR).json({ message: constants.SERVER_ERROR });
@@ -100,7 +100,7 @@ export default class TimelineEventController {
 
     async getTimelineEventById(req: Request, res: Response): Promise<void> {
         try {
-            const _timelineEvent: ITimelineEvent | null = await timelineEventService.getTimelineEventById(req.params.id);            
+            const _timelineEvent: ITimelineEvent | null = await timelineEventService.getTimelineEventById(req.params.id);
             if (_timelineEvent instanceof Error || _timelineEvent === null) {
                 res.status(status.PAGE_NOT_FOUND).json({ message: constants.NOT_FOUND, error: true });
             }
@@ -153,29 +153,47 @@ export default class TimelineEventController {
             return res.status(500).json({ message: error });
         }
     }
-    
-    async compareIncidentChanges(req: Request, res: Response):Promise<void> {
+
+    async deleteFileInTimelineEventByValue(req: Request, res: Response): Promise<Response> {
+        try {
+            const timelineEventId: string = req.params.id;
+            const file: string | any = req.query.fileString;
+            const updatedTimelineEvent = await timelineEventService.deleteFileInTimelineEventByValue(timelineEventId, file);
+            if (updatedTimelineEvent instanceof Error) {
+                if (updatedTimelineEvent.message == 'Timeline event not found') {
+                    return res.status(status.PAGE_NOT_FOUND).json({ message: constants.NOT_FOUND, timelineEventId: req.params.id });
+                }
+                return res.status(status.MISSNG_REQUIRED_FIELDS).json({ message: constants.SERVER_ERROR });
+            }
+            logger.info({ source: constants.TIMELINE_EVENT, msg: constants.SUCCESS, timelineEventId, file: file, method: constants.METHOD.DELETE });
+            return res.status(status.SUCCESS).json(updatedTimelineEvent);
+        } catch (error: any) {
+            return res.status(500).json({ message: error });
+        }
+    }
+
+    async compareIncidentChanges(req: Request, res: Response): Promise<void> {
         interface compare {
             description: string[];
             files: Buffer[];
-          }
+        }
         const allTimelineEvents: ITimelineEvent[] | null = await timelineEventService.getTimelineEventsById(req.body.incidentId);
-        const a=awsService.getAllAttachmentByTimeline(req.body.files)
-        let file:Buffer[]=[]
-        a.then(function(result:any) {
-            file=result.data // "Some User token"
-         })
-         let answer:compare = { description:["", "", ""] ,files:file};
+        const a = awsService.getAllAttachmentByTimeline(req.body.files)
+        let file: Buffer[] = []
+        a.then(function (result: any) {
+            file = result.data // "Some User token"
+        })
+        let answer: compare = { description: ["", "", ""], files: file };
         if (allTimelineEvents != null) {
             let sortedDatesDescending: ITimelineEvent[] = allTimelineEvents.slice().sort((a, b) => b.createdDate.getTime() - a.createdDate.getTime());
             const previousTimeLineEvent: ITimelineEvent = sortedDatesDescending[1]
             answer.description[2] = req.body.description
-            if (previousTimeLineEvent?.priority != req.body.priority){
-                answer.description[0] ="priority changed: "+ previousTimeLineEvent.priority + " => " + req.body.priority+'\n'
+            if (previousTimeLineEvent?.priority != req.body.priority) {
+                answer.description[0] = "priority changed: " + previousTimeLineEvent.priority + " => " + req.body.priority + '\n'
                 sendToSocket(req.body as ITimelineEvent, ObjectType.TimelineEvent, ActionType.ChangePriority);
-            }   
+            }
             if (previousTimeLineEvent?.type != req.body.type)
-                answer.description[1] ="type changed: "+ previousTimeLineEvent.type + " => " + req.body.type+'\n'
+                answer.description[1] = "type changed: " + previousTimeLineEvent.type + " => " + req.body.type + '\n'
         }
         res.status(status.SUCCESS).json(answer);
     }
